--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ test {
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
 }
