--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,14 @@ test {
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
-    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "com.natpryce:konfig:1.6.10.0"
+    implementation platform("org.http4k:http4k-bom:4.10.0.1")
+    implementation "org.http4k:http4k-core"
+    implementation "org.http4k:http4k-server-jetty"
+    implementation "org.http4k:http4k-template-thymeleaf"
+    implementation "org.slf4j:slf4j-simple:2.0.0-alpha0"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.7.2"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+    testImplementation "net.sourceforge.htmlunit:htmlunit:2.51.0"
 }
