--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Build
         run: ./gradlew clean build shadowJar
       - name: Store JAR
-      - uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
           name: cesil-emulator
           path: build/lib/cesil-emulator.jar
