--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -20,4 +20,5 @@ jobs:
         with:
           name: cesil-emulator
           path: build/lib/cesil-emulator.jar
+          if-no-files-found: error
 
