GitHub Action - deploy to Heroku

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,6 +22,7 @@ jobs:
           path: build/libs/cesil-emulator.jar
           if-no-files-found: error
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Set-up Heroku Java plugin
