--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: cesil-emulator
-          path: cesil-emulator.jar
+      - run: ll /home/runner/work/cesil/cesil/
       - name: Deploy to Heroku
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
