--- a/build.gradle
+++ b/build.gradle
@@ -16,17 +16,15 @@ test {
 
 shadowJar {
     archiveFileName = "cesil-emulator.jar"
-    mergeServiceFiles()
     manifest {
         attributes 'Main-Class': "uk.me.cmh.cesil.web.CesilServerKt"
     }
 }
 
 dependencies {
-    implementation platform("org.http4k:http4k-bom:4.10.0.1")
-    implementation "org.http4k:http4k-core"
-    implementation "org.http4k:http4k-server-jetty"
-    implementation "org.http4k:http4k-template-thymeleaf"
+    implementation "io.ktor:ktor-server-core:1.6.2"
+    implementation "io.ktor:ktor-server-netty:1.6.2"
+    implementation "io.ktor:ktor-thymeleaf:1.6.2"
     implementation "org.slf4j:slf4j-simple:2.0.0-alpha0"
     implementation "com.natpryce:konfig:1.6.10.0"
     testImplementation "org.junit.jupiter:junit-jupiter:5.7.2"
