--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     implementation "com.natpryce:konfig:1.6.10.0"
     testImplementation "org.junit.jupiter:junit-jupiter:5.7.2"
     testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
-    testImplementation "net.sourceforge.htmlunit:htmlunit:2.51.0"
+    testImplementation 'net.sourceforge.htmlunit:htmlunit:2.52.0'
 }
