--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,7 +5,7 @@ on:
       - 'README.md'
       - 'html-prototyping/**'
 jobs:
-  build-web:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
