Test logging added to Gradle build

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ subprojects {
 
     test {
         useJUnitPlatform()
+        testLogging {
+            events "passed", "skipped", "failed"
+        }
     }
 
     dependencies {
