Adding ShadowJar to the CLI module to build the JAR file

--- a/cesil-cli/build.gradle
+++ b/cesil-cli/build.gradle
@@ -1,3 +1,14 @@
+plugins {
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
+}
+
+shadowJar {
+    archiveFileName = "cesil-cli.jar"
+    manifest {
+        attributes 'Main-Class': "uk.me.cmh.cesil.cli.CesilCliAppKt"
+    }
+}
+
 dependencies {
     implementation project(":cesil-interpreter")
 }
