--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,8 @@
 name: Tests
 on:
   push:
+    branches:
+      - main
     paths-ignore:
       - 'README.md'
       - 'html-prototyping/**'
@@ -17,5 +19,5 @@ jobs:
           distribution: 'adopt'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build
+      - name: Run tests
         run: ./gradlew clean test
