--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,8 @@ on:
     paths-ignore:
       - 'README.md'
       - 'html-prototyping/**'
+    tags-ignore:
+      - '**'
 jobs:
   test:
     runs-on: ubuntu-latest
