--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,10 +1,10 @@
-name: Release
+name: Build and release
 on:
   push:
     tags:
       - '*'
 jobs:
-  release-and-build:
+  build-and-release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
