--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ subprojects {
     }
 
     group 'uk.me.cmh'
-    version '1.0-SNAPSHOT'
+    version '1.0.0'
 
     java {
         targetCompatibility = JavaVersion.VERSION_11
