--- a/cesil-web/Dockerfile
+++ b/cesil-web/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:11
-COPY ./cesil-web/build/libs/cesil-web.jar /usr/app/
+COPY ./build/libs/cesil-web.jar /usr/app/
 WORKDIR /usr/app
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "cesil-web.jar"]
