--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 
 plugins {
     id "org.jetbrains.kotlin.jvm" version "$kotlinVersion"
+    id "com.github.ben-manes.versions" version "0.42.0"
 }
 
 repositories {
