--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 kotlin.code.style=official
 
-kotlinVersion=1.5.31
-slf4jVersion=1.7.32
-junitVersion=5.7.2
-mockitoVersion=3.2.0
+kotlinVersion=1.7.10
+slf4jVersion=2.0.0
+junitVersion=5.9.0
+mockitoVersion=4.0.0
+benMamesVersionsVersion=0.42.0
