--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 kotlin.code.style=official
 
-kotlinVersion=1.7.10
-slf4jVersion=2.0.0
-junitVersion=5.9.0
-mockitoVersion=4.0.0
-benMamesVersionsVersion=0.42.0
+kotlinVersion=1.9.20
+slf4jVersion=2.0.13
+junitVersion=5.11.0-M2
+mockitoVersion=5.3.1
+benMamesVersionsVersion=0.51.0
