--- a/cesil-web/build.gradle
+++ b/cesil-web/build.gradle
@@ -12,7 +12,7 @@ shadowJar {
 dependencies {
     implementation "io.ktor:ktor-server-core:$ktorVersion"
     implementation "io.ktor:ktor-server-netty:$ktorVersion"
-    implementation "io.ktor:ktor-thymeleaf:$ktorVersion"
+    implementation "io.ktor:ktor-server-thymeleaf:$ktorVersion"
     implementation "com.natpryce:konfig:$konfigVersion"
     implementation project(":cesil-interpreter")
     testImplementation "net.sourceforge.htmlunit:htmlunit:$htmlUnitVersion"
